--- a/code.html
+++ b/code.html
@@ -12,7 +12,7 @@
 <div id="header">
     <div class="container">
         <nav>
-            <img src="images/logo.png" class="logo">
+            <img src="Smit  Sutariya.png" class="logo">
             <ul id="sidemenu">
                 <li><a href="#header">Home</a></li>
                 <li><a href="#about">About</a></li>
@@ -24,7 +24,7 @@
             <i class="fas fa-bars" onclick="openmenu()"></i>
         </nav>
         <div class="header-text">
-            <p>B.tech Student</p>
+            <p>B.Tech Student</p>
             <h1>I'm <span>Smit Sutariya</span><br>From Modasa,Gujarat</h1>
         </div>
     </div>
@@ -38,33 +38,27 @@
             </div>
             <div class="about-col-2">
                 <h1 class="sub-title">About Me</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nulla nibh, tincidunt sit amet sapien quis, elementum molestie tellus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Mauris eleifend magna id ante convallis mattis. Quisque in sem tristique, dictum sapien et, accumsan libero.</p>
+                <p>Hi, I'm Smit Sutariya, and I come from the beautiful town of Modasa in Gujarat. Currently, I am in my third year of pursuing a B.Tech degree at the renowned IIT Kanpur. My passion lies in web design, and I thoroughly enjoy creating visually stunning and aesthetically pleasing websites. Alongside web design, I have a deep fascination with programming. My programming skills include proficiency in languages like C, C++, and Python. I take great pleasure in leveraging these languages to solve problems and develop innovative solutions. It's incredibly satisfying to see my ideas come to life through coding and witness the impact they can make.
+
+
+
+                </p>
 
                 <div class="tab-titles">
                     <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
-                    <p class="tab-links" onclick="opentab('experience')">Experience</p>
                     <p class="tab-links" onclick="opentab('education')">Education</p>
                 </div>
                 <div class="tab-contents active-tab" id="skills">
                     <ul>
-                        <li><span>UI/UX</span><br>Designing Web/App interfaces</li>
-                        <li><span>Web Development</span><br>Web app Development</li>
-                        <li><span>App Development</span><br>Building Android/iOS apps</li>
-                    </ul>
-                </div>
-                <div class="tab-contents" id="experience">
-                    <ul>
-                        <li><span>2021 - Current</span><br>UI/UX Design Training at ET Institute</li>
-                        <li><span>2019 - 2021</span><br>Team lead at StarApp LLC.</li>
-                        <li><span>2017 - 2019</span><br>UI/UX Design Executive at Coin Digital Ltd.</li>
-                        <li><span>2016 - 2017</span><br>Internship at ekart eCommerce.</li>
+                        <li><span>Web Development</span><br>Website Development and design</li>
+                        <li><span>Programming Languages</span><br>C/C++, Python, HTML, CSS, JavaScript</li>
                     </ul>
                 </div>
                 <div class="tab-contents" id="education">
                     <ul>
-                        <li><span>2016</span><br>UI/UX Design Training at ET Institute</li>
-                        <li><span>2016</span><br>MBA from MIT Bangalore.</li>
-                        <li><span>2014</span><br>BBA from ISM Bangalore.</li>
+                        <li><span>2021-Current</span><br>Indian Institute Of Technology, Kanpur</li>
+                        <li><span>2021</span><br>12th from Abhinav Vidhya Vihar, Gandhinagar</li>
+                        <li><span>2019</span><br>10th from KK Shah Secondary Highschool, Modasa</li>
                     </ul>
                 </div>
             </div>
@@ -79,19 +73,19 @@
             <div>
                 <i class="fas fa-code"></i>
                 <h2>Web Design</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nulla nibh, tincidunt sit amet sapien quis.</p>
+                <p>I craft visually captivating websites that leave a lasting impression with help of HTML, CSS, JavaScript.</p>
                 <a href="#">Learn more</a>
             </div>
             <div>
                 <i class="fas fa-crop-alt"></i>
                 <h2>UI/UX Design</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nulla nibh, tincidunt sit amet sapien quis.</p>
+                <p>I do UI/UX designs that elevate websites to next level and leave a lasting impression on users.</p>
                 <a href="#">Learn more</a>
             </div>
             <div>
                 <i class="fab fa-app-store"></i>
-                <h2>App Design</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nulla nibh, tincidunt sit amet sapien quis.</p>
+                <h2>Programming</h2>
+                <p>I do problem solver through programming. With expertise in languages like C, C++, and Python, I tackle challenges with determination and precision.</p>
                 <a href="#">Learn more</a>
             </div>
         </div>
@@ -136,15 +130,14 @@
         <div class="row">
             <div class="contact-left">
                 <h1 class="sub-title">Contact Me</h1>
-                <p><i class="fas fa-paper-plane"></i> contact@example.com</p>
-                <p><i class="fas fa-phone-square-alt"></i> 0123456789</p>
+                <p><i class="fas fa-paper-plane"></i> smitkumar21@iitk.ac.in</p>
+                <p><i class="fas fa-phone-square-alt"></i> 8758962688</p>
                 <div class="social-icons">
-                    <a href="https://facebook.com/"><i class="fab fa-facebook"></i></a>
-                    <a href=""><i class="fab fa-twitter-square"></i></a>
-                    <a href=""><i class="fab fa-instagram"></i></a>
-                    <a href=""><i class="fab fa-linkedin"></i></a>
+                    <a href="https://www.facebook.com/smit.sutariya.376"><i class="fab fa-facebook"></i></a>
+                    <a href="https://www.instagram.com/sutariya_smit/"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.linkedin.com/in/smit-sutariya-936508247/"><i class="fab fa-linkedin"></i></a>
                 </div>
-                <a href="images/my-cv.pdf" download class="btn btn2">Download CV</a>
+                <a href="/Users/smitsutariya/Desktop/211087_Sutariya Smitkumar_BT_EE_MR.pdf" download class="btn btn2">Download CV</a>
             </div>
             <div class="contact-right">
                 <form name="submit-to-google-sheet">
@@ -158,7 +151,7 @@
         </div>
     </div>
     <div class="copyright">
-        <p>Copyright © Kevin. Made wtih <i class="fas fa-heart"></i> by <a href="https://www.youtube.com/channel/UCkjoHfkLEy7ZT4bA2myJ8xA?sub_confirmation=1">Easy Tutorials</a></p>
+        <p>Copyright © Smit Sutariya. Made with <i class="fas fa-heart"></i> </p>
     </div>
 </div>
 
